feat: updated response of member and api key management endpoints
